# Avatar

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_tts.py
.agent/skills/gdg-course-design-pattern/: SKILL.md
.agent/skills/gdg-course-design-pattern/references/: adk-spec.md  change-log.md  env-setup.md  fastapi-sqlite-spec.md  identity-spec.md  memory-system-spec.md  testing-spec.md
.agent/skills/post-change-test-and-sync/: SKILL.md
.agent/skills/python-run/: SKILL.md
.agents/skills/gdg-course-design-pattern/: SKILL.md
.agents/skills/gdg-course-design-pattern/references/: adk-spec.md  env-setup.md  fastapi-sqlite-spec.md  memory-system-spec.md  testing-spec.md
.agents/skills/python-run/: SKILL.md
Avatar/adk_agents/avatar/: agent.py
Avatar/app/: agent.py  main.py  retrieval.py
Avatar/data/: identity.md  master.md  memory.md  soul.md  startup.md
Avatar/static/: index.html
Avatar/test/: test_agent.py  test_main.py
google-adk-trail/a_single_agent/: day_trip.py
google-adk-trail/b_sequential_agent/: agents.py
google-adk-trail/c_parallel_agent/: agents.py
google-adk-trail/d_loop_agent/: agents.py
google-adk-trail/e_agent_as_tool/: agents.py
