[project]
name = "avatar"
version = "0.1.0"
description = "Avatar Local Agent OS with FastAPI, SQLite, Markdown memory, and Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "google-adk>=1.26.0",
    "google-genai>=1.14.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]
